# pockett-docs

./: .cursorrules  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  DATABASE_MIGRATION.md  DEPLOYMENT_TROUBLESHOOTING.md  ENVIRONMENT_SETUP.md  ENV_VARIABLES_CHECKLIST.md  GOOGLE_SCOPE_MANAGEMENT.md  ICON_GENERATION_README.md  README.md  SUPABASE_CONFIG_FIX.md  agy-claude-proxy-readme.md  env.example  env.production.example  pyproject.toml  scripts.py  vercel.json
.claude/: settings.json
.claude/agents/: architect.md  devops-engineer.md  engineer.md  pm.md  qe.md  ux-engineer.md
.github/: copilot-instructions.md  pull_request_template.md
backend/app/: main.py
docs/: Businessline-consulting-advisory-agency.md  ICP-1-Accounting-Tax-LP.md  ICP-2-IndependentConsultant-LP.md  ICP-Top1.md  ICP-Top5.md  ICP-v2-research.md  UX-screens.docx  competitor-analysis.md  features_list.md  gdrive_micro_saas_painpoints.md  landing_page_skeleton.md  pockett_prd.md  small-business-cloud-needs.md  ux-instructions.md
frontend/: .appignore  .eslintrc.json  .pockettignore  .vercelignore  debug-connector.txt  debug-db.js  debug-fetch.js  debug-oauth.txt  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  reset-db.js  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  test-boost.js  test-db.ts  test-fuse.js  test-sync.ts  test-tuning.js  tsconfig.json  vercel.json  verify-db.js  vitest.config.ts
scripts/: gen-pdf-mvp-docs.js  generate-hld-pdf.js  generate_ico.py  generate_logo.py  requirements.txt
(+827 files in other folders)
